syntax = "proto3";
package schema.v2;

message Chat {
  int32 project_id = 1;
  Status status = 2;

  enum Status {
    started = 0;
    inprogress = 1;
    done = 2;
  }

  enum CreatedFrom {
    assistant = 0;
    plugin = 1;
  }
}

message Message {
  int32 project_id = 1;
  Status status = 2;
  Assitant assitant = 3;
  From from = 4;
  string content = 5;
  bool hidden = 6;
  map<string, string> metadata = 7;

  enum Status {
    success = 0;
    inprogress = 1;
    failed = 2;
  }

  enum Assitant {
    backend = 0;
    frontend = 1;
    po = 2;
    tm = 3;
    developer = 4;
    monorepo = 5;
    fullstack_developer = 6;
  }

  enum From {
    system = 0;
    ai = 1;
    human = 2;
    assistant = 3;
  }
}

message Resource {
  string name = 1;
  string content = 2;
  ResourceType resource_type = 3;
  Status status = 4;
  string category = 5;
  map<string, string> metadata = 6;

  enum Status {
    draft = 0;
    ready = 1;
    inprogress = 2;
    error = 3;
    success = 4;
  }

  enum ResourceType {
    code = 0;
    document = 1;
    image = 2;
  }
}

message Reference {
  string name = 1;
  string origin = 2;
  ReferenceType reference_type = 3;
  string category = 4;
  string content = 5;
  map<string, string> metadata = 6;

  enum ReferenceType {
    CODE = 0;
    USECASE = 1;
    BUSINESS_LOGIC = 2;
    API = 3;
    TICKET = 4;
    IMAGE = 5;
  }
}

